<resources>
    <string name="app_name">todoapp</string>
    <string name="hist">What needs to be done?</string>
    <string name="add">Add</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="clear_completed">Clear completed</string>
    <string name="number_of_items">%d items left</string>
    <string name="delete">Delete</string>
</resources>
