<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hist"
        android:gravity="center_vertical"
        android:hint="@string/hist"
        android:inputType="text"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_number_of_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radio_group_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/filter_all"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/filter_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/filter_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/filter_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:textSize="14sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_clear_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_completed"
        android:layout_gravity="end"
        android:textSize="14sp" />

</LinearLayout>